# Discord-Color-Bot

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  config.example  config.yaml  main.go
src/: commands.rs  config.rs  create.rs  main.rs  role.rs
