[package]
name = "Discord-Color-Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "current" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"
serde_yaml = "0.9.27"
serde = "1.0.188"
lazy_static = "1.4.0"
image = "0.24.7"
rand = "0.8.5"